-issue#1419: CLog: preg_match can blow up log file
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue#1432: Delete confirmation does not disappear
-issue: Output message timer not clearing properly on page refresh
-feature: Updated Chinese Simplified translations
-feature: Updated Dutch translations
-feature: Make LDAP errors consistent across functions
-feature: JavaScript library Chart.js updated 2.7.2 

1.1.36
-issue#934: Template names missing in graph management list
-issue#1211: CDEF and VDEF Item Edit do not use correct procedures
-issue#1250: Language support does not support localization properly
-issue#1331: Log Rotation should occur at midnight on system
-issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
-issue#1336: Debian test suite reports php error
-issue#1338: Allow automation to be run in debug mode from GUI
-issue#1339: First graph of second page does not render
-issue#1340: Unable to open Time Graph View in new tab
-issue#1348: Toggle context menu of Zoom
-issue#1351: Errorimage does not render on systems without GD ttf support
-issue#1353: New installation without config.php silently throws errors
-issue#1355: Single tree can have the order of the tree changed
-issue#1357: Data Profile disable fields shown temporarily as editable
-issue#1359: Settings page generates error for removed plugin tab
-issue#1362: DSStats Avg/Peak function broken due to change in RRDtool processing
-issue#1365: Plugin Management enforce folder name
-issue#1366: Improve error/info message display
-issue#1380: Potential failure when updating script type
-issue#1384: When installing/enabling plugins, current user and admin should get permissions
-issue#1386: form_selectable_cell() ignores width if no style_or_class is passed